--- a/src/app/components/header.component.html
+++ b/src/app/components/header.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="/">Playlist!</a>
+<nav class="navbar navbar-dark mb-5">
+    <a class="navbar-brand" routerLink="playlist">My Spotify playlist!</a>
 </nav>
