--- a/src/app/container/playlist/playlist.component.scss
+++ b/src/app/container/playlist/playlist.component.scss
@@ -1,4 +1,46 @@
 img {
     border-radius: 0;
-    width: 33.333%;
+    position: relative;
+}
+
+.track {
+    position: relative;
+
+    &__info {
+        background: rgb(0, 0, 0);
+        background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.6797093837535014) 0%,
+            rgba(0, 0, 0, 0) 100%
+        );
+        bottom: 0;
+        color: white;
+        padding: 2rem 1rem 0 1rem;
+        position: absolute;
+        width: 100%;
+
+        h5 {
+            font-size: 1rem;
+        }
+
+        p {
+            font-size: 0.75rem;
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .track {
+        position: relative;
+
+        &__info {
+            h5 {
+                font-size: 1.25rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+        }
+    }
 }
