Changed state selectors

--- a/src/app/container/playlist/playlist.component.scss
+++ b/src/app/container/playlist/playlist.component.scss
@@ -10,7 +10,7 @@ img {
         background: rgb(0, 0, 0);
         background: linear-gradient(
             0deg,
-            rgba(0, 0, 0, 0.6797093837535014) 0%,
+            rgba(0, 0, 0, 0.8) 0%,
             rgba(0, 0, 0, 0) 100%
         );
         bottom: 0;
